--- a/scratch/index.html
+++ b/scratch/index.html
@@ -26,7 +26,7 @@
   <div class="common content">
     <h2 id="projects">My Projects</h2>
 
-    <a href="../realresume.html" target="_blank">My Resume</a>
+    <a href="aboutme.html" target="_blank">My Resume</a>
 
     <h3>I run a pants company selling Indonesian pajama pants.</h3>
     <a href="https://www.Javvas.com">Buy some pants!!</a>
