--- a/scratch/home.html
+++ b/scratch/home.html
@@ -30,7 +30,7 @@
         <br>
         <br>
         <h2>My Resume is linked here</h2>
-        <a href="aboutme.html" target="_blank">My Resume</a>
+        <a href="resume.html" target="_blank">My Resume</a>
         <h2>A random video I like:</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9v1eZONUv3w?si=tBH9Rc-RsZWGG44P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <br><br><br><br>
