--- a/scratch/aboutme.html
+++ b/scratch/aboutme.html
@@ -32,6 +32,8 @@
     <br><br>
     <h1>My Resume</h1>
     <br>
+    <p>(I have a resume made with html above)</p>
+    <br>
     <iframe src="https://byu-my.sharepoint.com/personal/novanova_byu_edu/_layouts/15/Doc.aspx?sourcedoc={ff70db3b-25a9-4960-83fa-dc80f5028671}&amp;action=embedview" width="600px" height="1000px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
     </center>
     <br>
