--- a/scratch/aboutme.html
+++ b/scratch/aboutme.html
@@ -12,6 +12,7 @@
         <br>
         <a href="home.html">HOME</a> &nbsp; | &nbsp;
         <a href="https://javvas.com/">Javvas</a> &nbsp; | &nbsp;
+        <a href="resume.html">Resume</a> &nbsp; | &nbsp;
         <a href="../game.html" target="_blank">Game</a>
     </div>
     <div class="common header">
